for #134 - basic transformation of tags into categories

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,7 +23,7 @@
 @import "modules/social-media";
 @import "modules/mascot";
 @import "modules/listing-results";
-@import "modules/listing-tags";
+@import "modules/listing-categories";
 @import "modules/listing-offers";
 @import "modules/listing-offers";
 @import "modules/listing-organizations";
