--- a/app/views/offers/shared/_search_form.html.slim
+++ b/app/views/offers/shared/_search_form.html.slim
@@ -18,5 +18,5 @@
                                     input_html: { \
                                       class: 'JS-Search-location',
                                       value: default_geolocation }
-  = f.input :tags, as: :hidden
+  = f.input :categories, as: :hidden
   button.main-search__submit = t 'shared.search.button'
