Basic implementation of Google Analytics with IP Anonymization

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -57,6 +57,7 @@ html class='no-js' lang=I18n.locale
     |  <!--<![endif]-->
 
     = csrf_meta_tags
+    = render 'layouts/partials/header'
 
   body class="template--#{controller_name}-#{action_name}"
     .page-wrap
