--- a/app/assets/javascripts/gmaps_search_results.coffee.erb
+++ b/app/assets/javascripts/gmaps_search_results.coffee.erb
@@ -1,8 +1,6 @@
 initialize = ->
   canvas = document.getElementById('map-canvas')
   markers = $(canvas).data('markers')
-  contentString = '<div id="content">Info Window Sample Content</div>'
-  infowindow = new (google.maps.InfoWindow)(content: contentString)
   includedPoints = []
 
   if markers
@@ -28,7 +26,7 @@ initialize = ->
       bounds.extend markerPosition
 
       # Bind Event Listeners To Marker
-      bindMapsEvents map, marker, markerData, infowindow
+      bindMapsEvents map, marker, markerData
       bindMarkerToResults marker, markerData
 
     # Get User Position
@@ -52,14 +50,13 @@ initialize = ->
     bindExternalEvents()
 
 
-bindMapsEvents = (map, marker, markerData, infowindow) ->
-  google.maps.event.addListener marker, 'mouseover', (event) ->
-    for offerID in markerData.offer_ids
-      $("#result-offer-#{offerID}").addClass 'JS-highlighted'
+bindMapsEvents = (map, marker, markerData) ->
 
-  google.maps.event.addListener marker, 'mouseout', (event) ->
-    for offerID in markerData.offer_ids
-      $("#result-offer-#{offerID}").removeClass 'JS-highlighted'
+  contentString = '<div id="content">' + markerData.offer_ids[0] + '</div>'
+  infowindow = new (google.maps.InfoWindow)(content: contentString)
+
+  console.log markerData
+#  console.log marker
 
   google.maps.event.addListener marker, 'click', (event) ->
     offerID = markerData.offer_ids[0] # specification needed
