--- a/app/views/offers/index.html.slim
+++ b/app/views/offers/index.html.slim
@@ -24,11 +24,7 @@
             h4.Listing-results__offerinfo
               - if offer.location
                 span.Listing-results__emphasis.Listing-results__organization
-                  - if offer.organizations.count > 1
-                    = t 'offers.index.cooperation'
-                  - else
-                    = offer.organizations.first.name
-                = offer.location_address
+                  = offer.organization_display_name
               - else
                 span.Listing-results__emphasis = t 'offers.index.location_everywhere'
       = paginate @offers
