--- a/app/views/contacts/shared/_new.html.slim
+++ b/app/views/contacts/shared/_new.html.slim
@@ -1,4 +1,4 @@
-= semantic_form_for contact,
+= simple_form_for contact,
                     html: { class: 'contact-form' },
                     remote: reporting do |f|
   = f.input :name, label: false, input_html: { placeholder: 'Name (Pflicht)' }
