--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -10,13 +10,13 @@
       section.section-content.section-content--what
         h3.section-content__title = t 'offers.show.what'
         .section-content__body
-          = @offer.description
+          == @offer.description
 
       section.section-content.section-content--nextsteps
         h3.section-content__title
           = t 'offers.show.next_steps'
         .section-content__body
-          p== @offer.next_steps
+          == @offer.next_steps
 
       / TODO: Refactor!
       - if @offer.opening_details?
