--- a/app/assets/stylesheets/base/_base.scss
+++ b/app/assets/stylesheets/base/_base.scss
@@ -25,10 +25,10 @@ body {
   height: 100%;
 }
 
-ul {
-  margin: 0;
-  padding: 0;
-}
+// ul {
+//   margin: 0;
+//   padding: 0;
+// }
 
 /**
  * Make 'tel' link not appear as links on desktop.
