Regarding #131, map infowindow link color and window width

--- a/app/assets/javascripts/gmaps_search_results.coffee.erb
+++ b/app/assets/javascripts/gmaps_search_results.coffee.erb
@@ -1,7 +1,7 @@
 initialize = ->
   canvas = document.getElementById('map-canvas')
   markers = $(canvas).data('markers')
-  infowindow = new (google.maps.InfoWindow)()
+  infowindow = new (google.maps.InfoWindow)({ maxWidth: 200 })
   includedPoints = []
 
   if markers
