--- a/app/assets/stylesheets/modules/_map.scss
+++ b/app/assets/stylesheets/modules/_map.scss
@@ -6,9 +6,13 @@
 
 #map-container,
 #map-canvas {
-  height: 300px;
+	height: 300px;
 }
 
 .Map-infowindow__headline {
-  margin-bottom: 0;
+	margin-bottom: 0;
+
+	a {
+		color: $brand_orange;
+	}
 }
