--- a/app/assets/stylesheets/mediaqueries/_s.scss
+++ b/app/assets/stylesheets/mediaqueries/_s.scss
@@ -11,6 +11,11 @@
 
   // Header ######################################
 
+  .Banner__link {
+    display: block;
+    padding: 0 0 5px 0;
+  }
+
   .Logo {
     position: absolute;
     top: 10px;
