--- a/app/assets/stylesheets/base/_header.scss
+++ b/app/assets/stylesheets/base/_header.scss
@@ -28,7 +28,7 @@
 
 .header-main--wide {
   height: 475px;
-  border-top: 4px solid $brand_yellow;
+  // border-top: 4px solid $brand_yellow; // disabled when banner is active
   background: image-url('bg_scratches.jpg') no-repeat center bottom;
   background-size: cover;
 
