--- a/app/assets/javascripts/gmaps_search_results.coffee.erb
+++ b/app/assets/javascripts/gmaps_search_results.coffee.erb
@@ -50,11 +50,13 @@ initialize = ->
 
 
 bindMapsEvents = (map, marker, markerData, infowindow) ->
-  if markerData.organization_id
-    # ToDo: Refactor!
-    contentString = HoganTemplates['map_info_window_organization'].render(markerData)
-  else if markerData.offer_ids[1] != undefined
-    contentString = 'Viele Suchergebnisse für diesen Marker gefunden; bitte Suche nutzen' # refactor
+  if not markerData.organization_display_name # if is organization
+    contentString =
+      HoganTemplates['map_info_window_organization'].render(markerData)
+  else if markerData.ids[1] != undefined
+    contentString =
+      'Viele Suchergebnisse für diesen Marker gefunden; bitte Suche nutzen'
+      # TODO: refactor
   else
     contentString = HoganTemplates['map_info_window_offer'].render(markerData)
 
@@ -68,10 +70,8 @@ bindMapsEvents = (map, marker, markerData, infowindow) ->
     infowindow.close()
 
 bindMarkerToResults = (marker, markerData) ->
-  # ToDo: Refactor (make usable for organizations)
-  if markerData.offer_ids
-    for offerID in markerData.offer_ids
-      $("#result-offer-#{offerID}").data('marker', marker)
+  for offerID in markerData.ids
+    $("#result-offer-#{offerID}").data('marker', marker)
 
 
 google.maps.event.addDomListener window, 'load', initialize
