Expand relative positioned typeahead for offer search from Breakpoint S to M

--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -58,7 +58,17 @@
   #new_search_form {
     margin: 0 auto;
 
+
     .template--pages-home & {
+
+      .twitter-typeahead {
+        span.tt-dropdown-menu {
+          right: 0 !important; // overriding JS
+          position: relative !important;
+          margin-top: 50px;
+          margin-bottom: 10px;
+        }
+      }
 
       #search_form_search_location {
         margin: 0;
@@ -91,8 +101,16 @@
         width: auto;
         height: 50px;
 
+        .input.string {
+          height: auto !important;
+          min-height: 40px;
+
+          &.search_form_search_location {
+          }
+        }
+
         &.search_form_search_location {
-          margin: 15px 0 5px;
+          margin: 10px 0;
           height: 50px;
         }
       }
