Fixing breakpoint L as well

--- a/app/assets/stylesheets/mediaqueries/_l.scss
+++ b/app/assets/stylesheets/mediaqueries/_l.scss
@@ -151,6 +151,17 @@
   }
 
 
+  #new_search_form {
+    .template--pages-home & {
+      .twitter-typeahead {
+        span.tt-dropdown-menu {
+          right: 0 !important; // overriding JS
+        }
+      }
+    }
+  }
+
+
   // Footer ######################################
 
   .footer-main {
