Change non-startpage main column widths, changing order on offers#index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,7 @@
 @import "modules/distributor";
 @import "modules/social-media";
 @import "modules/mascot";
+@import "modules/categories";
 @import "modules/listing-results";
 @import "modules/listing-categories";
 @import "modules/listing-offers";
