--- a/app/views/offers/index.html.slim
+++ b/app/views/offers/index.html.slim
@@ -1,4 +1,6 @@
 .wrapper-inner
+  .Categories
+    h2.Categories__headline = t 'offers.index.main_categories'
   main.content-main
     .Listing-results
       h2.Listing-results__headline
@@ -25,12 +27,8 @@
           p= I18n.t 'offers.index.unavailable_location_modal'
           = render '/update_requests/new', update_request: @update_request
 
-  aside.aside-standard
 
-    = render 'offers/index/categories_sidebar', categories: @categories,
-                                                search_cache: @search_cache
 
-    = render 'offers/index/map_sidebar', markers: @markers, position: @position
 
 - content_for :view_specific_scripts do
   = javascript_include_tag "gmaps_search_results.js"
