--- a/app/assets/javascripts/gmaps_search_results.coffee.erb
+++ b/app/assets/javascripts/gmaps_search_results.coffee.erb
@@ -38,8 +38,11 @@ initialize = ->
         userPosition.latitude,
         userPosition.longitude
       )
-      includedPoints.push userPosition
-      bounds.extend userPosition
+      # if not exact location as only other marker
+      unless includedPoints.length is 1 and
+             userPosition.toString() == includedPoints[0].toString()
+        includedPoints.push userPosition
+        bounds.extend userPosition
 
     # Expand Map to Include All Markers
     if includedPoints.length > 1
@@ -55,8 +58,11 @@ bindMapsEvents = (map, marker, markerData, infowindow) ->
       HoganTemplates['map_info_window_organization'].render(markerData)
   else if markerData.ids[1] != undefined
     contentString =
-      'Viele Suchergebnisse für diesen Marker gefunden; bitte Suche nutzen'
-      # TODO: refactor
+      HoganTemplates['map_info_window_multiple'].render
+        title: I18n.t 'js.map_info_window_multiple.title'
+        text: I18n.t 'js.map_info_window_multiple.text'
+        anchor: I18n.t 'js.map_info_window_multiple.anchor'
+        url: generate_exact_search_url markerData.position
   else
     contentString = HoganTemplates['map_info_window_offer'].render(markerData)
 
@@ -68,6 +74,14 @@ bindMapsEvents = (map, marker, markerData, infowindow) ->
 
   google.maps.event.addListener map, 'click', (event) ->
     infowindow.close()
+
+generate_exact_search_url = (position) ->
+  location.origin + location.pathname + $.query.set(
+    'search_form[generated_geolocation]',
+    "#{position.latitude},#{position.longitude}"
+  ).set(
+    'search_form[exact_location]', 't'
+  ).toString()
 
 bindMarkerToResults = (marker, markerData) ->
   for offerID in markerData.ids
